--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-  "name": "quizflix",
-  "version": "0.1.0",
+  "name": "github.com/fsrenan/quizflix@feature/login-with-facebook",
+  "version": "0.0.0",
+  "description": "FSRenan/quizflix @ Aug 30, 2018",
+  "author": null,
   "private": true,
-  "devDependencies": {
-    "react-native-scripts": "1.14.0",
-    "jest-expo": "~27.0.0",
-    "react-test-renderer": "16.3.1"
-  },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
-  "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "jest"
-  },
-  "jest": {
-    "preset": "jest-expo"
-  },
+  "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "expo": "^27.0.1",
-    "prop-types": "^15.6.2",
+    "expo": "^27.0.0",
     "react": "16.3.1",
-    "react-native": "~0.55.2"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "firebase": "^5.4.1",
+    "prop-types": "15.6.2",
+    "react-native-elements": "^0.19.1",
+    "react-test-renderer": "16.4.2"
   }
 }
