Refactor Login Screen/ Code

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "github.com/fsrenan/quizflix@feature/login-with-facebook",
-    "description": "FSRenan/quizflix @ Aug 30, 2018",
-    "slug": "snack-r17tV8oPX",
+    "name": "organizacao-fb",
+    "description": "FSRenan/quizflix @ Sep 4, 2018",
+    "slug": "snack-Bk8owFr_7",
     "privacy": "unlisted",
     "sdkVersion": "27.0.0",
     "version": "1.0.0",
